# stash

./: README.md  package-lock.json  package.json
docs/: index.html
scripts/: release.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_watch.rs  commands.rs  db.rs  lib.rs  main.rs
