[package]
name = "stash"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
arboard = "3.6.1"
image = "0.25.10"
sha2 = "0.11.0"
chrono = "0.4.44"
uuid = { version = "1.23.2", features = ["v4"] }
base64 = "0.22.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"

